# stm32-usb2can

GUI/Console_CanablePro_Test/: Console_CanablePro_Test.sln
GUI/Console_CanablePro_Test/Console_CanablePro_Test/: Program.cs
GUI/Gripper_V4/: Gripper_V4.sln
GUI/Gripper_V4/Gripper_V4/: CANablePro.cs  CircularQueue.cs  Form1.Designer.cs  Form1.cs  Gripper.cs  Gripper_V4.csproj  Program.cs  USB2CAN.cs
GUI/Gripper_V4/Gripper_V4/Properties/: Settings.Designer.cs
GUI/UA_CAN/: UA_CAN.sln  UpgradeLog.htm
GUI/UA_CAN/UA_CAN/: CANablePro.cs  CircularQueue.cs  Form1.Designer.cs  Form1.cs  Gripper.cs  Gripper_V4.cs  Program.cs  QueueBuffer.cs  Solenoid.cs  UA_CAN.csproj  USB2CAN.cs
firmware/stm32g431-usb2can-fw/: CMakeLists.txt
firmware/stm32g431-usb2can-fw/prj/vscode/: stm32g431-usb2can-fw.code-workspace
firmware/stm32g431-usb2can-fw/src/: main.cpp  main.h
firmware/stm32g431-usb2can-fw/src/ap/: ap.cpp  ap.h  ap_def.h
firmware/stm32g431-usb2can-fw/src/ap/mode/: can_mode.cpp  can_mode.h  cli_mode.cpp  cli_mode.h
firmware/stm32g431-usb2can-fw/src/ap/thread/: thread.cpp
firmware/stm32g431-usb2can-fw/src/ap/thread/cmd/driver/: cmd_uart.cpp
firmware/stm32g431-usb2can-fw/src/ap/thread/cmd/process/: cmd_boot.cpp  cmd_boot.h
firmware/stm32g431-usb2can-fw/src/ap/thread/common/: cli.cpp  cli_thread.cpp  led.cpp
firmware/stm32g431-usb2can-fw/src/ap/thread/manage/: can.cpp  mode.cpp
firmware/stm32g431-usb2can-fw/src/bsp/: bsp.c  bsp.h
firmware/stm32g431-usb2can-fw/src/bsp/FreeRTOS/: FreeRTOSConfig.h
firmware/stm32g431-usb2can-fw/src/bsp/device/: stm32g4xx_hal_conf.h  stm32g4xx_it.c  system_stm32g4xx.c
firmware/stm32g431-usb2can-fw/src/bsp/ldscript/: STM32G431CBUX_FLASH.ld
firmware/stm32g431-usb2can-fw/src/common/: def.h
firmware/stm32g431-usb2can-fw/src/common/core/: util.c  util.h
firmware/stm32g431-usb2can-fw/src/common/hw/inc/: button.h  can.h  reset.h
firmware/stm32g431-usb2can-fw/src/common/hw/src/: cli.c
firmware/stm32g431-usb2can-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/stm32g431-usb2can-fw/src/hw/driver/: button.c  can.c  cdc.c  cmd.c  fault.c  i2c.c  led.c  reset.c  rtc.c  spi_flash.c  uart.c
firmware/stm32g431-usb2can-fw/src/hw/driver/usb/: usb.c  usb.h  usbd_conf.h
